# Solar-PV-LLM-AI

./: .coveragerc  .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  CITATION_MANAGER_README.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INGESTION_README.md  LICENSE  MERGE_REPORT.md  PIPELINE_DOCUMENTATION.md  QUICKSTART.md  README.md  RUNBOOK.md  USAGE_GUIDE.md  VECTOR_STORE_INTEGRATION.md  app.py  docker-compose.prod.yml  docker-compose.yml  example_usage.py  ingest_iec_pdf.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_server.sh  setup.py  setup_environment.py  streamlit_app.py
.github/workflows/: ci-cd.yml  ci.yml
app/: __init__.py  main.py
app/core/: config.py  security.py
app/middleware/: __init__.py  logging.py  metrics.py
app/services/: citation_manager.py  document_ingestion.py  image_analyzer.py  llm_orchestrator.py  pv_calculator.py  rag_engine.py
backend/: Dockerfile  __init__.py  alembic.ini  app.py  config.py  main.py  requirements.txt
backend/api/: __init__.py  admin_routes.py  feedback_routes.py  mock_service.py  query_routes.py
backend/app/: __init__.py  config.py  main.py
backend/calculators/: __init__.py  degradation_rate.py  energy_yield.py  spectral_mismatch.py
backend/config/: constants.py  settings.py
backend/database/: connection.py
backend/image_analysis/: __init__.py  roboflow_service.py
backend/models/: __init__.py  database.py  schemas.py
backend/rag/: __init__.py  pinecone_config.py  rag_service.py
backend/routers/: __init__.py  calculator.py  chat.py  image.py  search.py
backend/services/: __init__.py  celery_tasks.py  feedback_service.py  llm_service.py  nrel_client.py  (+3 more)
config/: __init__.py  ingestion_config.yaml  rag_config.py  settings.py
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API_REFERENCE.md  API_USAGE.md  ARCHITECTURE.md  ENVIRONMENT.md  EXAMPLES.md  MONITORING.md  QUICKSTART.md  QUICK_START.md  USAGE_GUIDE.md
examples/: advanced_usage.py  basic_usage.py  demo_analysis.py  example_usage.py
frontend/: Dockerfile  __init__.py  api_client.py  index.html  next.config.js  nginx.conf  package.json  requirements.txt  streamlit_app.py  tailwind.config.js
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  service.yaml
kubernetes/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template
load-testing/: locustfile.py
monitoring/: prometheus.yml
sample_docs/: solar_pv_documents.json
scripts/: backup.sh  load-test.sh  rollback.sh  setup.sh
src/: __init__.py  api.py  config.py  main.py  pipeline.py
terraform/: main.tf  terraform.tfvars.example
tests/: __init__.py  conftest.py  qa_verification.py  test_api_endpoints.py  test_calculators.py  test_citation_extractor.py  test_citation_formatter.py  test_citation_manager.py  test_citation_tracker.py  test_image_analysis.py  test_imports.py  test_integration.py  test_metadata.py  test_pipeline.py  test_qa_demo.py  test_rag_engine.py  test_reference_tracker.py  test_vector_store.py  test_vector_store_comprehensive.py
workers/: Dockerfile  celery_app.py  requirements.txt
(+215 files in other folders)
